# docs/swagger.json
@@ -243,9 +243,6 @@
                 "token_type": {
                     "description": "always \"Bearer\"",
                     "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/domain.User"
                 }
             }
         },
@@ -279,8 +276,7 @@
             "type": "object",
             "required": [
                 "email",
-                "password",
-                "password_confirm"
+                "password"
             ],
             "properties": {
                 "email": {
@@ -289,9 +285,6 @@
                 "password": {
                     "type": "string",
                     "minLength": 8
-                },
-                "password_confirm": {
-                    "type": "string"
                 }
             }
         },
